Leave Management System/force-app/main/default/objects/Case/fields/Is_delegated__c.field-meta.xml
<CustomField>
    <fullName>Is_delegated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This case is delegated or not.</description>
    <label>Is_delegated</label>
    <type>Checkbox</type>
</CustomField>