Leave Management System/force-app/main/default/objects/Case/fields/Orginal_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Orginal_Owner_Id__c</fullName>
    <description>It is store the Id of orginial owner, if the owner goes on the leave.</description>
    <label>Orginal Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>