Leave Management System/force-app/main/default/objects/Case/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is look up to Original Owner of the case.</description>
    <label>Original Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>